--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,7 @@
 baseURL = 'https://signalgone.github.io/b1/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Signal Gone'
 theme = 'PaperMod'
+
+params:
+  math: true
