--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: true
 
       - name: Checkout destination
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         if: github.ref == 'refs/heads/main'
         with:
           ref: gh-pages
@@ -34,7 +34,7 @@ jobs:
           cp -R public/* ${GITHUB_WORKSPACE}/built-site/
           cd ${GITHUB_WORKSPACE}/built-site
           git add .
-          git config user.name 'dhij'
-          git config user.email 'davidhwang.ij@gmail.com'
+          git config user.name 'lxrxy'
+          git config user.email 'lxrxy99@gmail.com'
           git commit -m 'Updated site'
           git push
