--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,13 @@ theme = 'PaperMod'
 math = true
 uglyURLs = true
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.parser]
+      wrapStandAloneImageWithinParagraph = false
+      [markup.goldmark.parser.attribute]
+        block = true
+    
 [build]
   writeStats = true
 
