--- a/hugo.toml
+++ b/hugo.toml
@@ -15,9 +15,18 @@ staticDir = ['static']
 
 [params]
 math = true
-homeInfoParams=
-  Title= 'Hi there'
-  Content= Can be Info, links, about...
+
+[params.homeInfoParams]
+Title = "Hi there wave"
+Content = "Can be Info, links, about..."
+
+#[[params.socialIcons]]
+#name = "<platform>"
+#url = "<link>"
+
+#[[params.socialIcons]]
+#name = "<platform 2>"
+#url = "<link2>"
 
 
 
